--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
-== README
+== Howdy, Reader!
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+You, my good friend, have stumbled upon my new website. Though it is not yet ready for the eyes of a web browser, I assure you, it will be glorious.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Visit again soon for updates!
